--- a/src/shmemc/heapsize.h.in
+++ b/src/shmemc/heapsize.h.in
@@ -3,6 +3,10 @@
 #ifndef _SHMEMC_HEAP_SIZE_H
 #define _SHMEMC_HEAP_SIZE_H 1
 
-static char *default_heap_size = "@SHMEM_DEFAULT_HEAP_SIZE@";
+#ifdef HAVE_CONFIG_H
+# include "config.h"
+#endif /* HAVE_CONFIG_H */
+
+static char *default_heap_size = SHMEM_DEFAULT_HEAP_SIZE;
 
 #endif /* ! _SHMEMC_HEAP_SIZE_H */
