--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -26,6 +26,10 @@ LIBSHMEMC_SOURCES         += pmix-client.c
 EXTRA_CFLAGS                 = @PMIX_CFLAGS@
 endif
 
+lib_LTLIBRARIES           = libshmemc-ucx.la
+libshmemc_ucx_la_SOURCES  = $(LIBSHMEMC_SOURCES)
+libshmemc_ucx_la_CFLAGS   = $(UCX_CFLAGS) $(EXTRA_CFLAGS) $(OTHER_CPPFLAGS)
+
 lib_LIBRARIES             = libshmemc-ucx.a
 libshmemc_ucx_a_SOURCES   = $(LIBSHMEMC_SOURCES)
 libshmemc_ucx_a_CFLAGS    = $(UCX_CFLAGS) $(EXTRA_CFLAGS) $(OTHER_CPPFLAGS)
