--- a/src/shmemu/Makefile.am
+++ b/src/shmemu/Makefile.am
@@ -4,7 +4,7 @@ OTHER_CPPFLAGS            = -I../../include \
 				-I$(srcdir)/../shmemc \
 				-I$(srcdir)/uthash
 LIBSHMEMU_SOURCES         = hostname.c fatal.c logger.c timer.c unitparse.c \
-				shmemu-init.c miscops.c round.c collalgo.c
+				shmemu-init.c miscops.c round.c
 
 if ENABLE_DEBUG
 LIBSHMEMU_SOURCES        += deprecate.c
