Fix ups for shmemx proposed routines we have, e.g. wtime().  Protect ENABLE_ selected code better (compiler wwarning)

--- a/include/null-shmemx.h.in
+++ b/include/null-shmemx.h.in
@@ -5,6 +5,6 @@
 
 #include <shmem.h>
 
-/* no extensions, so nothing here */
+/* no extensions requested, so nothing here */
 
 #endif  /* ! _SHMEMX_H */
