--- a/include/shmemx.h.in
+++ b/include/shmemx.h.in
@@ -42,6 +42,11 @@ extern "C"
     double shmemx_wtime(void);
 
     /*
+     * profiling
+     */
+    void shmemx_pcontrol(int level);
+
+    /*
      * address translation
      *
      */
