--- a/configure.ac
+++ b/configure.ac
@@ -92,7 +92,7 @@ AC_CHECK_TYPES([ptrdiff_t])
 # AC_FUNC_REALLOC
 AC_FUNC_MMAP
 AC_CHECK_FUNCS([atexit gettimeofday gethostname uname memset])
-AC_SEARCH_LIBS([log10], [m])
+AC_CHECK_LIB([m], [log10])
 
 AM_INIT_AUTOMAKE
 
