--- a/configure.ac
+++ b/configure.ac
@@ -91,7 +91,7 @@ AC_CHECK_TYPES([ptrdiff_t])
 # AC_FUNC_MALLOC
 # AC_FUNC_REALLOC
 AC_FUNC_MMAP
-AC_CHECK_FUNCS([atexit gettimeofday gethostname uname memset])
+AC_CHECK_FUNCS([atexit gettimeofday gethostname uname memset strlcat])
 AC_CHECK_LIB([m], [log10])
 
 AM_INIT_AUTOMAKE
