Make sure shmemc inlines get dependencies in osh_info (Oracle Studio cnmplains)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -88,5 +88,7 @@ libshmem_a_LIBADD      = liballocator.a
 bin_PROGRAMS           = osh_info
 osh_info_SOURCES       = osh_info.c info.c
 osh_info_CPPFLAGS      = $(all_cppflags)
+osh_info_CFLAGS        =
 # minimize execution-time deps
-osh_info_LDFLAGS       = $(shmemu_dir)/libshmemu.a
+osh_info_LDFLAGS       = $(shmemu_dir)/libshmemu.a \
+				$(shmemc_dir)/libshmemc-ucx.a
