Abstract pthread usage into shmemc and provide shmemc_ abstraction

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -15,6 +15,7 @@ LIBSHMEMC_SOURCES         = \
 				readenv.c \
 				shmemc-init.c \
 				state.c \
+				threading.c \
 				ucx-init.c \
 				waituntil.c
 
