--- a/configure.ac
+++ b/configure.ac
@@ -49,8 +49,8 @@ AC_DEFINE_UNQUOTED([SHMEM_VENDOR_STRING],
 
 AC_CONFIG_SRCDIR([autogen.sh])
 AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_MACRO_DIRS([m4])
-# AC_CONFIG_MACRO_DIR([m4])
+# AC_CONFIG_MACRO_DIRS([m4])
+AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([subdir-objects])
 
 AM_SILENT_RULES([yes])
