Clean up uninstall
Added local rules to remove non-target files copied into place:

. oshc++ wrapper
. man pages
. headers

during "make uninstall"

Tree is now devoid of files

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -48,6 +48,10 @@ install-exec-hook:
 	cd $(bindir); \
 	cp -p oshcxx oshc++
 
+uninstall-local:
+	cd $(bindir); \
+	$(RM) oshc++
+
 endif # c++
 
 if ENABLE_FORTRAN
