--- a/man/man1/Makefile.am
+++ b/man/man1/Makefile.am
@@ -8,7 +8,7 @@ man1_MANS       += oshcxx.1
 
 install-data-hook:
 	cd $(man1dir); \
-	cp -p oshcxx.1 oshc++.1
+	$(LN_S) oshcxx.1 oshc++.1
 
 uninstall-local:
 	cd $(man1dir); \
