Oops, extension headers have to be copied into place from source

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -72,8 +72,8 @@ nobase_include_HEADERS  = $(SHMEM_HDRS)
 # these are installed regardless of whether SHMEMX_ enabled
 
 install-data-hook:
-	$(LN_S) $(SHMEMX_HEADER) $(includedir)/shmemx.h
-	$(LN_S) $(SHMEMX_HEADER_F) $(includedir)/shmemx.fh
+	cp -p $(SHMEMX_HEADER) $(includedir)/shmemx.h
+	cp -p $(SHMEMX_HEADER_F) $(includedir)/shmemx.fh
 
 uninstall-local:
 	$(RM) $(includedir)/shmemx.h $(includedir)/shmemx.fh
