Revamp of debugging
Allow different message categories to select what you want
to see output about.

Affects just about all components, majjor update in shmemu
to parse out requested categories from user.

--- a/man/man1/oshrun.1.in
+++ b/man/man1/oshrun.1.in
@@ -47,6 +47,13 @@ enable run debugging (if configured).
 .LP
 This implementation also has
 .RS 4
+.IP "SHMEM_DEBUG_CATEGORIES (string: default none)"
+A comma-separated list of categories that generate debug messages (if
+debug enabled, v.i.): fatal, init, finalize, memory, heaps, contexts,
+info, reductions, barriers, deprecate, locks, atomics; or "all", which
+selects all of the above.
+.RE
+.RS 4
 .IP "SHMEM_DEBUG_FILE (string: default none)"
 file to receive debugging information.
 .RE
